# oasa-notifier

./: .pre-commit-config.yaml  README.md  lines.json  pyproject.toml
notifier/: settings.py  urls.py
notifier/viber/: apps.py  tasks.py  views.py
